# dlib_mnist

./: CMakeLists.txt  README.md
src/: mnist01.cpp  mnist02.cpp
